freebsd-utils (10.0-2) UNRELEASED; urgency=low

  * Handle USB keyboard attach/detach events.
  * Remove Build-Conflicts on libc0.1-dev-i386 (not needed anymore since
    kdump is now using headers from kfreebsd-headers-10.0-1).
  * Remove kludge that allowed auto-detected macros to be missing when
    building kdump. (Closes: #736202)

 -- Robert Millan <rmh@debian.org>  Tue, 21 Jan 2014 12:38:27 +0100

freebsd-utils (10.0-1) experimental; urgency=low

  * New upstream release.
    - Refresh all patches.
    - Remove atacontrol(8).

  [ Robert Millan ]
  * Add /etc/sysctl.conf. It used to be provided by procps, but now it
    isn't. Its content is kernel-specific anyway, so let's just use the
    FreeBSD version.
  * Correctly setup BSD version of MAKEFLAGS to support parallel builds.

 -- Robert Millan <rmh@debian.org>  Tue, 21 Jan 2014 00:24:13 +0100

freebsd-utils (9.2+ds1-1) unstable; urgency=low

  * Drop freebsd-geom transitional package.
  * Fetch source code securely (https) in get-orig-source.
  * Split udeb build from normal build, using a separate objdir by means
    of MAKEOBJDIRPREFIX. This allows us to:
    - Optimize udeb build for size (-Os).
    - Build udeb with -DWITHOUT_IPX_SUPPORT (for ifconfig).
    - Restrict -DWITHOUT_JAIL only to udeb build. This effectively brings
      back jail support to ifconfig.
    - As a side requirement, source code is moved to src/ directory to
      prevent dh_install from mistakenly installing source directories as
      if they were executable files.
  * Leave -lbsdxml untouched (latest freebsd-glue supports it).
  * netstat_numeric_default.diff: Honor -n flag when listing the default
    route (for compatibility with Linux route(8)).
  * route_list.diff: When route is invoked with no arguments, fallback
    to "netstat -r" to list existing routes (for compatibility with
    Linux route(8)).

 -- Robert Millan <rmh@debian.org>  Wed, 25 Dec 2013 18:46:00 +0100

freebsd-utils (9.2-2) unstable; urgency=low
